[workspace]
members = [
    "crates/runtime",
    "crates/msg",
    "crates/map",
    "crates/zos",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
zenoh = "1.9.0"
serde = { version = "1", features = ["derive"] }

zos-runtime = { path = "crates/runtime" }
zos-msg = { path = "crates/msg" }
zos-map = { path = "crates/map" }
